--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>中华人民共和国安全生产法 - 考试题库</title>
+    <title>月度考试题目分享</title>
     <style>
         * {
             margin: 0;
