--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
               type="text"
               class="search-input"
               id="searchInput"
-              placeholder="搜索..."
+              placeholder="如果觉得参考答案不靠谱可在此输入题目手动搜索"
             />
             <div class="search-icon" id="searchIcon"></div>
           </div>
