--- a/index.html
+++ b/index.html
@@ -652,7 +652,7 @@
           <div class="divider"></div>
           <div class="title-text">
             <div class="breadcrumb">宝丰人 › 企业文化践行 › 政策热点学习</div>
-            <div class="main-title">中华人民共和国安全生产法</div>
+            <div class="main-title">关于有序推动绿电直连发展有关事项的通知</div>
           </div>
         </div>
 
