--- a/index.html
+++ b/index.html
@@ -756,7 +756,8 @@ const questions = [
     question: "3.存量负荷开展绿电直连的前提之一是（)",
     options: [
       { text: "关闭所有燃煤燃气自备电厂", correct: false },
-      { text: "燃煤燃气自备电厂足额清缴可再生能源发展基金 C.获得省级电网企业独家授权", correct: true },
+      { text: "燃煤燃气自备电厂足额清缴可再生能源发展基金", correct: true },
+      { text: "获得省级电网企业独家授权", correct: false }
       { text: "周边无其他新能源项目", correct: false }
     ]
   },
