--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
               type="text"
               class="search-input"
               id="searchInput"
-              placeholder="搜索..."
+              placeholder="2025年7月"
             />
             <div class="search-icon" id="searchIcon"></div>
           </div>
