--- a/index.html
+++ b/index.html
@@ -887,8 +887,7 @@
     <div class="swipe-tip-modal" id="swipeTipModal">
       <div class="swipe-tip-card">
         <div class="swipe-tip-content">
-          1、移动端现已全面支持左右滑动切换试题，欢迎尝鲜
-          2、遇题目导航点击无效时，点按页面任意空白区域即可恢复正常
+          移动端现已全面支持左右滑动切换试题，欢迎尝鲜
         </div>
         <button class="swipe-tip-confirm" id="swipeTipConfirm">知道了</button>
       </div>
