--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
   {
     id: 1,
     type: "single",
-    question: "宝丰集团2025年中经营管理工作会上，董事长强 调全员盘点的核心是?",
+    question: "宝丰集团2025年中经营管理工作会上，董事长强调全员盘点的核心是?",
     options: [
       { text: "人员数量统计", correct: false },
       { text: "对标岗位评价员工能力素养，确保人岗匹配", correct: true },
@@ -937,7 +937,7 @@
   {
     id: 2,
     type: "single",
-    question: "关于人才布局 董事长提出的关键措施不包括？",
+    question: "关于人才布局，董事长提出的关键措施不包括？",
     options: [
       { text: "搭建老中青人才梯队", correct: false },
       { text: "对关键岗位表现差的人制定替代或提升方案", correct: false },
@@ -1025,7 +1025,7 @@
   {
     id: 10,
     type: "single",
-    question: "销售管理中，储能系统及材料销售的当前突出",
+    question: "销售管理中，储能系统及材料销售的当前突出问题是？",
     options: [
       { text: "市场需求不足", correct: false },
       { text: "销售团队搭建不专业", correct: true },
@@ -1047,8 +1047,9 @@
   {
     id: 12,
     type: "single",
-    question: "储能产业计划何时全面实现全产业链投产？ A.2025年底",
+    question: "储能产业计划何时全面实现全产业链投产？",
     options: [
+      { text: "2025年底", correct: true },
       { text: "2026年", correct: true },
       { text: "2027年", correct: false },
       { text: "2028年", correct: false }
