--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,7 @@
     type: "single",
     question: "储能产业计划何时全面实现全产业链投产？",
     options: [
-      { text: "2025年底", correct: true },
+      { text: "2025年底", correct: false },
       { text: "2026年", correct: true },
       { text: "2027年", correct: false },
       { text: "2028年", correct: false }
