--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
               type="text"
               class="search-input"
               id="searchInput"
-              placeholder="2025年8月"
+              placeholder="2025年9月"
             />
             <div class="search-icon" id="searchIcon"></div>
           </div>
@@ -926,166 +926,166 @@
   {
     id: 1,
     type: "single",
-    question: "宝丰集团2025年中经营管理工作会上，董事长强调全员盘点的核心是?",
+    question: "红四煤矿在成本管控方面的突出做法是？",
     options: [
-      { text: "人员数量统计", correct: false },
-      { text: "对标岗位评价员工能力素养，确保人岗匹配", correct: true },
-      { text: "员工工龄梳理", correct: false },
-      { text: "部门人员结构分析", correct: false }
+      { text: "减少设备投入", correct: false },
+      { text: "通过技术手段解决成本管控问题", correct: true },
+      { text: "降低员工薪酬", correct: false },
+      { text: "缩减安全培训预算", correct: false }
     ]
   },
   {
     id: 2,
     type: "single",
-    question: "关于人才布局，董事长提出的关键措施不包括？",
+    question: "焦化事业部环保部的核心管理要求是？",
     options: [
-      { text: "搭建老中青人才梯队", correct: false },
-      { text: "对关键岗位表现差的人制定替代或提升方案", correct: false },
-      { text: "仅由人力资源部门负责", correct: true },
-      { text: "做好大学生招聘及职业发展规划", correct: false }
+      { text: "优先使用最贵的环保设备", correct: false },
+      { text: "用最小的投入解决环保问题", correct: true },
+      { text: "只关注国家环保标准，忽略地方标准", correct: false },
+      { text: "暂缓环保项目投资", correct: false }
     ]
   },
   {
     id: 3,
     type: "single",
-    question: "行政管理部门对会议的核心要求是？",
+    question: "公辅事业部电力运营公司的核心管理要求是？",
     options: [
-      { text: "确保全员参与", correct: false },
-      { text: "必须解决问题，不开“闲会”", correct: true },
-      { text: "会议时长不超过1小时", correct: false },
-      { text: "会后发布详细纪要", correct: false }
+      { text: "减少电力消耗", correct: false },
+      { text: "提升电力交易效能，确保收益落地", correct: true },
+      { text: "仅管理现有电力，不参与储能交易", correct: false },
+      { text: "降低设备维护频率", correct: false }
     ]
   },
   {
     id: 4,
     type: "single",
-    question: "经营管理中强调的办事风格是？",
+    question: "建设事业部计划部需解决的关键问题是？",
     options: [
-      { text: "每周总结问题", correct: false },
-      { text: "当天问题不过夜", correct: true },
-      { text: "每月集中解决问题", correct: false },
-      { text: "重大问题上报后再处理", correct: false }
+      { text: "材料计划过于宽松", correct: false },
+      { text: "材料到场与现场施工脱节", correct: true },
+      { text: "设备采购周期过短", correct: false },
+      { text: "施工人员过多", correct: false }
     ]
   },
   {
     id: 5,
     type: "single",
-    question: "监察部的核心职能是？",
+    question: "马莲台煤矿因“2・17”安全生产事故，被要求在哪个方面为全公司树立标杆？",
     options: [
-      { text: "事后审计决策质量", correct: false },
-      { text: "事前全面监督 降低各环节风险至“零”", correct: true },
-      { text: "仅负责招标流程监督", correct: false },
-      { text: "替代管理层处理经营问题", correct: false }
+      { text: "成本最低", correct: false },
+      { text: "产量最高", correct: false },
+      { text: "矿井规范管理", correct: true },
+      { text: "技术创新", correct: false }
     ]
   },
   {
     id: 6,
     type: "single",
-    question: "审计管理的核心是?",
+    question: "化工事业部烯烃三厂因何种问题被要求深入调查并严肃处理？",
     options: [
-      { text: "第三方财务审计，找出数字问题", correct: false },
-      { text: "对团队和管理干部的决策能力、质量进行审计，为为管理提升提供支撑", correct: true },
-      { text: "仅审计采购部门", correct: false },
-      { text: "制定企业管理制度", correct: false }
+      { text: "设备老化", correct: false },
+      { text: "能耗超标", correct: false },
+      { text: "EVA2825产品质量事故", correct: true },
+      { text: "团队凝聚力不足", correct: false }
     ]
   },
   {
     id: 7,
     type: "single",
-    question: "宝丰集团认为“企业生命线”是？",
+    question: "四股泉煤矿需在何时报审关于开采方式的专报？",
     options: [
-      { text: "利润增长", correct: false },
-      { text: "安全环保", correct: true },
-      { text: "人才储备", correct: false },
-      { text: "市场份额", correct: false }
+      { text: "7月中旬", correct: false },
+      { text: "8月中旬", correct: true },
+      { text: "9月中旬", correct: false },
+      { text: "10月中旬", correct: false }
     ]
   },
   {
     id: 8,
     type: "single",
-    question: "企管部的工作核心应聚焦于？",
+    question: "储运事业部装备部需重点解决的问题是？",
     options: [
-      { text: "被动修订组织架构和制度", correct: false },
-      { text: "提高效益、降低成本，将架构设计为效益中心、流程为降本核心", correct: true },
-      { text: "仅负责部门协调", correct: false },
-      { text: "制定招聘计划", correct: false }
+      { text: "人员冗余", correct: false },
+      { text: "皮带跑偏、运行监测", correct: true },
+      { text: "原料采购价格过高", correct: false },
+      { text: "环保排放不达标", correct: false }
     ]
   },
   {
     id: 9,
     type: "single",
-    question: "采购管理的核心思想是?",
+    question: "精细化工事业部焦油厂针对安全管理人员配置问题，需在何时前形成专报？",
     options: [
-      { text: "优先选择低价供应商", correct: false },
-      { text: "以质论价，用最少的钱买最好的东西", correct: true },
-      { text: "仅关注采购数量", correct: false },
-      { text: "简化采购流程，提高效率", correct: false }
+      { text: "8月5日", correct: false },
+      { text: "8月10日", correct: true },
+      { text: "8月15日", correct: false },
+      { text: "8月20日", correct: false }
     ]
   },
   {
     id: 10,
     type: "single",
-    question: "销售管理中，储能系统及材料销售的当前突出问题是？",
+    question: "内蒙新材料项目需确保四期烯烃项目在何时全面投产？",
     options: [
-      { text: "市场需求不足", correct: false },
-      { text: "销售团队搭建不专业", correct: true },
-      { text: "产品质量问题", correct: false },
-      { text: "价格过高", correct: false }
+      { text: "2025年底", correct: false },
+      { text: "2026年底", correct: true },
+      { text: "2027年底", correct: false },
+      { text: "2028年底", correct: false }
     ]
   },
   {
     id: 11,
     type: "single",
-    question: "宝丰能源目前聚烯烃产能约为？",
+    question: "辅助单位检验中心的管理要求中，需由谁牵头核查EVA漏检原因？",
     options: [
-      { text: "300万吨", correct: false },
-      { text: "500多万吨", correct: true },
-      { text: "800万吨", correct: false },
-      { text: "1000万吨", correct: false }
+      { text: "董光斌", correct: false },
+      { text: "席浩民", correct: true },
+      { text: "赵福君", correct: false },
+      { text: "刘元管", correct: false }
     ]
   },
   {
     id: 12,
     type: "single",
-    question: "储能产业计划何时全面实现全产业链投产？",
+    question: "销售公司被要求在多长时间内完成团队整改，淘汰低效人员？",
     options: [
-      { text: "2025年底", correct: false },
-      { text: "2026年", correct: true },
-      { text: "2027年", correct: false },
-      { text: "2028年", correct: false }
+      { text: "3个月", correct: false },
+      { text: "6个月", correct: true },
+      { text: "9个月", correct: false },
+      { text: "12个月", correct: false }
     ]
   },
   {
     id: 13,
     type: "single",
-    question: "新能源汽车项目的建设地点是？",
+    question: "监察部的核心职业准则中，首要前提是？",
     options: [
-      { text: "宁夏宁东", correct: false },
-      { text: "内蒙古", correct: false },
-      { text: "山东济南", correct: true },
-      { text: "新疆准东", correct: false }
+      { text: "业务精通", correct: false },
+      { text: "对公司的绝对忠诚", correct: true },
+      { text: "沟通能力强", correct: false },
+      { text: "经验丰富", correct: false }
     ]
   },
   {
     id: 14,
     type: "single",
-    question: "宝丰医院计划由哪家机构参与运营管理？",
+    question: "AI数智部需在哪些环节推进人工智能应用以实现管理升级？",
     options: [
-      { text: "清华大学医学部", correct: false },
-      { text: "北京大学医学部", correct: true },
-      { text: "上海交通大学医学部", correct: false },
-      { text: "浙江大学医学部", correct: false }
+      { text: "仅生产环节", correct: false },
+      { text: "煤矿安全、生产过程、经营风险管控等易产生风险的环节", correct: true },
+      { text: "仅销售环节", correct: false },
+      { text: "仅人力资源管理", correct: false }
     ]
   },
   {
     id: 15,
     type: "single",
-    question: "AI数智管理的目标是推动企业哪些环节的转型",
+    question: "建设事业部土建部存在的主要问题是？",
     options: [
-      { text: "仅生产环节", correct: false },
-      { text: "安全、生产、经营、管理、 财务共享等各环节", correct: true },
-      { text: "仅销售环节", correct: false },
-      { text: "仅人力资源管理", correct: false }
+      { text: "人员不足", correct: false },
+      { text: "制度建设、标准化体系构建薄弱", correct: true },
+      { text: "成本过高", correct: false },
+      { text: "进度滞后", correct: false }
     ]
   }
 ];
